--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -1,5 +1,7 @@
-# frozen_string_literal: true
-# A sample Gemfile
+
 source "https://rubygems.org"
 
 gem "sinatra"
+gem "sinatra-activerecord"
+gem "sqlite3"
+gem "rake"
